<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Normal mode only -->
    <item
        android:id="@+id/action_select"
        android:title="@string/action_select"
        android:icon="@drawable/ic_select"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reload"
        android:title="@string/gallery_reload"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <!-- Select mode only -->
    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        app:showAsAction="always"
        android:visible="false" />

</menu>
